[package]
name = "charts"
version = "0.2.0"
authors = ["Iulian Gulea <iulian.gulea@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "A pure Rust visualization library inspired by D3.js"
keywords = ["chart", "plot", "graph", "visualization"]
categories = ["visualization", "science"]
repository = "https://github.com/askanium/rustplotlib"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
svg="0.7.1"
